[package]
name = "redscript-collections"
version = "0.3.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
smallvec = "2.0.0-alpha.11"
indexmap = "2"

[dependencies.red4ext-rs]
git = "https://github.com/jac3km4/red4ext-rs"
rev = "943c3b1"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.clippy]
all = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
redundant_else = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
type_repetition_in_bounds = "warn"
equatable_if_let = "warn"
implicit_clone = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
match_bool = "warn"

[profile.release]
codegen-units = 1
panic = 'abort'
lto = true
